# viadot

./: .clang-format  .databricks-connect  .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .python_history  .secrets.baseline  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  None  README.md  Untitled copy.ipynb  Untitled.ipynb  carbon.db  config.yaml.example  databricks_prefect_test.ipynb  google_analytics_load_times_extract_test.json  google_analytics_load_times_extract_test.parquet  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  sync-dependecies.py  test.json  test.parquet  tests.ipynb  vid_club_tests.ipynb  workday_test.parquet
.config/: credentials.json.template
.cufflinks/: .config
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: 2.0-docker-publish.yml  2.0-publish_to_pypi.yml  build-2.0.yml  build.yml  cd.yml  ci-2.0.yml  ci.yml  deploy_docs.yml  deploy_pypi.yml  detect-and-tag-new-version.yml  docker-publish.yml  notify-labeled-devops.yml  notify-labeled.yml  publish_to_pypi.yml  pypi_publish.yml  release.yml  static-site-prepare.yml  static_analysis.yml  template-static-site-prepare-mkdocs.yml  template_docker_build_and_push.yml  template_slack_notify.yml  template_static_site_prepare_mkdocs.yml
.prefect/: config.toml.template  orion.db
advanced_usage/: index.html
advanced_usage/containerized_env/: index.html
developer_guide/: index.html
developer_guide/contributing_to_viadot/: index.html
developer_guide/creating_a_prefect_flow/: index.html
developer_guide/creating_a_source/: index.html
diego/: Genesys.ipynb  genesys_list_of_roles.ipynb
docker/: .bashrc  Dockerfile  build.sh  docker-compose.orion.yml  docker-compose.yml  docker-compose0.yml  entrypoint.sh  odbcinst.ini  run.sh  update.sh  viadot-aws.Dockerfile  viadot-azure.Dockerfile  viadot-lite.Dockerfile
docs/: about.md  getting_started.md  home.md  index.md  requirements.txt
docs/advanced_usage/: containerized_env.md  docker_containers.md  index.md
docs/developer_guide/: contributing_to_viadot.md  creating_a_prefect_flow.md  creating_a_source.md  index.md
docs/getting_started/: config_steps.md  getting_started.md
docs/howtos/: config_file.md  config_steps.md  copy_files_from_different_ADLS.md  copy_from_container_to_containter_ADLS.md  download_file_from_ADLS.md  flows.md  howto_migrate_sources_tasks_and_flows.md  insert.md  multipleflows.md  parquet_csv_to_df.md  run_sql.md  running_tasks.md  sqltodf.md  state_handlers.md  step_by_step_migration_flowchart  tests.md  uk_carbon_intensity.md
docs/references/: api_sources.md  flows_library.md  sources.md  sql_sources.md  task_library.md
docs/tasks/: taks_utils.md  task_library.md
docs/tutorials/: adding_source.md  aselite.md  bigquery.md  cloud_for_customers.md  databricks.md  sharepoint.md  supermetrics.md
docs/user_guide/: adding_prefect_flow.md  adding_source.md  config_key.md  creating_a_prefect_flow.md  creating_a_source.md  docker_containers.md  index.md  managing_dependencies.md  migration_guide.md  rye.md
docs/utils/: utils.md
getting_started/: index.html
howtos/config_file/: index.html
howtos/flows/: index.html
howtos/running_tasks/: index.html
mytest/: sap_test.py
notebooks/orion/: README.md
references/api_sources/: index.html
references/flows_library/: index.html
references/sql_sources/: index.html
references/task_library/: index.html
search/: search_index.json
src/viadot/: __init__.py  config.py  exceptions.py  signals.py  task_utils.py  utils.py
test_cpp_python/: CMakeLists.txt  Dockerfile  README.md  example.cpp  pyproject.toml  sap_rfc_connector.cpp  setup.py  test_example.py  test_sap_rfc_connector.py
test_cpp_python/inc/: SapErrorHandler.h  SapFunctionCaller.h  SapRfcConnector.h  SqlParser.h  utils.h
test_cpp_python/src/: SapErrorHandler.cpp  SapFunctionCaller.cpp  SapRfcConnector.cpp  SqlParser.cpp  sap_cpp_pybind.cpp  utils.cpp
test_cpp_python/test/: CMakeLists.txt  mock_sap_rfc_connector.h  sap_rfc_connector_test.cpp
tests/: .env.example  .env.template  conftest.py  pytest.ini  test_cloud_for_customers.py  test_file_json.json  test_viadot.py  testfile.sqlite
tests/integration/: test_azure_data_lake.py  test_azuresql.py  test_azurestorage.py  test_bigquery.py  test_business_core.py  test_cloud_for_customers.py  test_customer_gauge.py  test_databricks.py  test_epicor.py  test_eurostat.py  test_exchange_rates.py  test_genesys.py  test_git.py  test_hubspot.py  test_mediatool.py  test_mindful.py  test_minio.py  test_mysql.py  test_outlook.py  test_redshift_spectrum.py  test_s3.py  test_salesforce.py  test_sap_bw.py  test_sap_rfc.py  test_sftp.py  test_sharepoint.py  test_sql_server.py  test_sqlite.py  test_supermetrics.py  test_supermetrics_to_azuresql.py  test_tm1.py  test_trino.py  test_uk_carbon_intensity.py  test_vid_club.py  testfile.sqlite
tests/prefect/: test_azure_key_vault.py  test_tasks_sqlite.py  test_uk_carbon_intensity_tasks.py
tests/unit/: credentials.json  test_aselite.py  test_azure_sql.py  test_base.py  test_bigquery.py  test_business_core.py  test_cloud_for_customers.py  test_config.py  test_credentials.py  test_customer_gauge.py  test_databricks.py  test_databricks2.py  test_duckdb.py  test_ecb.py  test_ecb_response.xml  test_email_notification.py  test_entraid.py  test_eurostat.py  test_eurostat_response.json  test_exchange_rates.py  test_file.xlsx  test_genesys.py  test_hubspot.py  test_jira_api.py  test_launchpad.py  test_matomo.py  test_matomo_response.json  test_mediatool.py  test_mindful.py  test_minio.py  test_mysql.py  test_onestream.py  test_outlook.py  test_postgres.py  test_read_dbt_manifest.py  test_redshift_spectrum.py  test_s3.py  test_salesforce.py  test_sap_rfc.py  test_sap_rfc_2.py  (+16 more)
tests/viadot_tests/: pytest.ini
tutorials/adding_source/: index.html
tutorials/cloud_for_customers/: index.html
viadot/: __init__.py  config.py  exceptions.py  task_utils.py  task_utils_v2.py  utils.py
viadot/flows/: __init__.py  (+42 more)
(+567 files in other folders)
