[project]
name = "viadot2"
version = "2.0a25"
description = "A simple data ingestion library to guide data flows from some places to other places."
authors = [
    { name = "acivitillo", email = "acivitillo@dyvenia.com" },
    { name = "trymzet", email = "mzawadzki@dyvenia.com" },
]
dependencies = [
    "pandas==1.4.4",
    "pyarrow==10.0.1",
    "pyodbc>=4.0.34, <4.1.0",
    "visions==0.7.5",
    "sharepy>=2.0.0, <2.1.0",
    "sql-metadata==2.3.0",
    "sendgrid==6.9.7",
    "pydantic==1.10.11",
    "aiolimiter==1.0.0",
    "trino==0.326.*",
    "sqlalchemy==2.0.*",
    "prefect>=2.18.3",
    "lumacli>=0.1.2, <0.2.0",
    "pygit2>=1.13.3, <1.14.0",
]
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
databricks = [
    "databricks-connect==11.3.*",
]
viadot-azure = [
    "azure-core==1.25.0",
    "azure-storage-blob==12.13.1",
    "adlfs==2022.9.1",
    "azure-identity>=1.15.0",
    "dbt-sqlserver>=1.3, <1.8",
    "prefect-azure @ git+https://github.com/Trymzet/prefect-azure@add_keyvault_auth#egg=prefect-azure",
]
viadot-aws = [
    "awswrangler==2.19.0",
    "s3fs==2022.11.0",
    "boto3==1.24.59",
    "dbt-redshift>=1.3, <1.8",
    "minio>=7.0, <8.0",
]

[tool.rye]
dev-dependencies = [
    "black==22.6.0",
    "pytest==8.1.1",
    "pytest-cov==3.0.0",
    "Faker==13.12.1",
    "python-dotenv>=1.0.1",
    "coverage>=7.4.4",
    "mkdocs-material[imaging]>=9.4.3",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocs-include-dir-to-nav>=1.2.0",
    "neoteroi-mkdocs>=1.0.4",
    "mkdocs-jupyter>=0.24.4",
    "mkdocstrings[python]>=0.23.0",
    "mkdocs>=1.5.3",
    "mike>=1.1.2",
    "mkdocs-table-reader-plugin>=2.0.3",
    "mkdocs-include-markdown-plugin>=5.1.0",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "mkdocs-glightbox>=0.4.0",
    "aiohttp>=3.9.5",
    "loguru>=0.7.2",
]

[tool.pytest.ini_options]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_level = "WARNING"
addopts = "--ignore=dbt_packages"

[tool.coverage.run]
omit = ['tests/*']
