[project]
name = "viadot2"
version = "2.0.0-beta.1"
description = "A simple data ingestion library to guide data flows from some places to other places."
authors = [
    { name = "acivitillo", email = "acivitillo@dyvenia.com" },
    { name = "trymzet", email = "mzawadzki@dyvenia.com" },
]
dependencies = [
    "pyodbc>=5.1.0",
    "visions>=0.6.4",
    "sharepy>=2.0.0",
    "sql-metadata>=2.11.0",
    "sendgrid>=6.11.0",
    "pydantic>=1.10.9,<1.11.0",
    "aiolimiter>=1.1.0",
    "trino==0.328.*",
    "sqlalchemy==2.0.*",
    "lumacli>=0.1.2, <0.2.0",
    "pygit2>=1.13.3, <1.15.0",
    "openpyxl>=3.0.0,<3.1.0",
    "prefect>=2.19.7, <3",
    "requests==2.31.0",
    "prefect-sqlalchemy>=0.4.3",
    "pandas>=1.2.0, <1.5.0",
    "pyarrow>=10.0.1",
    "duckdb==1.0.0",
    "O365==2.0.18.1",
]
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]

databricks = ["databricks-connect==11.3.*"]

viadot-azure = [
    "azure-core==1.30.1",
    "azure-storage-blob==12.20.0",
    "adlfs==2024.4.1",
    "azure-identity>=1.16.0",
    "dbt-sqlserver>=1.3, <1.8",
    "prefect-azure @ git+https://github.com/Trymzet/prefect-azure@add_keyvault_auth#egg=prefect-azure",
    "prefect_github",
    "O365==2.0.18.1",
    "asynctest",
]
viadot-aws = [
    "s3fs==2024.6.0",
    "boto3==1.34.106",
    "dbt-redshift>=1.3, <1.8",
    "minio>=7.0, <8.0",
    "awswrangler==2.20.1",
    "prefect-aws==0.4.18",
]

[tool.rye]
dev-dependencies = [
    "black==22.6.0",
    "pytest==8.1.1",
    "pytest-cov==3.0.0",
    "Faker==13.12.1",
    "python-dotenv>=1.0.1",
    "coverage>=7.4.4",
    "aiohttp>=3.9.5",
    "loguru>=0.7.2",
    "mkdocs-material[imaging]>=9.4.3",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocs-include-dir-to-nav>=1.2.0",
    "neoteroi-mkdocs>=1.0.4",
    "mkdocs-jupyter>=0.24.4",
    "mkdocstrings[python]>=0.23.0",
    "mkdocs>=1.5.3",
    "mike>=1.1.2",
    "mkdocs-table-reader-plugin>=2.0.3",
    "mkdocs-include-markdown-plugin>=5.1.0",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "mkdocs-glightbox>=0.4.0",
]

[tool.pytest.ini_options]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_level = "WARNING"
addopts = "--ignore=dbt_packages"

[tool.coverage.run]
omit = ['tests/*']
